2008-01-31  Alexander Larsson  <alexl@redhat.com>

	Implement uri navigation for http uris (#509341)
	
        * client/gvfsurimapper.[ch]:
        Add get_mount_info_for_path method for mount types
	like ssh that change MountInfo as the path changes.
	
        * client/httpuri.c:
	Implement get_mount_info_for_path.
	For http, set the path from the uri.
	The will be removed on i/o by the corresponding
	path being in the mount_prefix.
	
        * daemon/gvfsbackendhttp.c:
	Set mount_prefix to path from uri.
	Remove unused code in message_new_from_filename

        * client/gdaemonfile.c:
        * client/gdaemonvfs.[ch]:
	Use the new uri mapper function to change GMountInfo
	as the path changes.
	
2008-01-31  Alexander Larsson  <alexl@redhat.com>

        * common/gmountspec.[ch]:
        Add shared path canonicalization:
	g_mount_spec_canonicalize_path()

2008-01-31  Alexander Larsson  <alexl@redhat.com>

	* daemon/soup-input-stream.c:
	Handle errors in send_finish.

2008-01-30  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendlocaltest.c:
	Use read/write operations instead of do_copy ()

2008-01-30  Alexander Larsson  <alexl@redhat.com>

        * client/gvfsfusedaemon.c:
	Set read and execute privs for all directories.
	Fix up type when reading can-read etc attributes.
	Don't use uid/gid in the fuse mount. The
	uid/gid doesn't make sense locally anyway.

2008-01-30  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackend.c:
        (g_vfs_backend_register_mount):
	Correctly detect unset stable name

2008-01-29  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendlocaltest.c:
	Fixed error handling in do_enumerate ()
	More cleanup

2008-01-29  Alexander Larsson  <alexl@redhat.com>

        * Makefile.am:
        * configure.ac:
        * gconf/Makefile.am: Added.
        * gconf/gapplookupgconf.[ch]: Added.
        * gconf/gconf-module.c: Added.
	Add gconf based implementation of
	g_app_info_get_default_for_uri_scheme ()
